src/objects/Achievement__c.object
<CustomObject>
    <fields>
        <fullName>Achievement_Category__c</fullName>
        <label>Achievement Category</label>
        <picklist>
            <picklistValues>
                <fullName>Climb Achievement</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IF(
  RecordType.DeveloperName = &apos;Salesforce_Certification&apos;,
  IMAGE(Salesforce_Certification_Logo_URL__c, &apos;Salesforce Certification Logo&apos;,126.3,220.8),
   IF(RecordType.DeveloperName = &apos;Trailhead_Badge&apos;, IMAGE(Trailhead_Logo_Url__c, &apos;Trailhead Badge Logo&apos;), IMAGE( Work_Badge_Image_URL__c, &apos;Climb Achievement Logo&apos;)) 
)</formula>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Completed_Status__c</fullName>
        <inlineHelpText>Overriding the completed status will make the Achievement Assignments go to the defined &quot;override status&quot; instead of &quot;Acquired&quot;. It&apos;s up to you move to the &quot;Acquired&quot; status once this feature is used.</inlineHelpText>
        <label>Override Completed Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_URL__c</fullName>
        <inlineHelpText>Specify a value if you want users to go to this URL when clicking the Achievement Image. This can be used to redirect to a custom page where you manage additional steps before changing the status of the Achievement to &quot;Acquired&quot;.</inlineHelpText>
        <label>Override URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Certification_Logo_URL__c</fullName>
        <formula>&apos;/resource/&apos; + SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( Name , &quot;&apos;&quot;, &quot;&quot;), &quot;.&quot;, &quot;_&quot;), &quot;: &quot;, &quot;_&quot;), &quot; - &quot;, &quot;_&quot;), &quot;&amp;&quot;, &quot;And&quot;), &quot; &quot;, &quot;_&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Certification Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Logo_Url__c</fullName>
        <label>Trailhead Logo Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Work_Badge_Image_URL__c</fullName>
        <label>Work Badge Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Achievement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Pardot</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_with_Logos</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Logo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Logos</label>
    </listViews>
    <nameField>
        <label>Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <recordTypes>
        <fullName>Climb_Achievement</fullName>
        <active>true</active>
        <label>Climb Achievement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Certification</fullName>
        <active>true</active>
        <label>Salesforce Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trailhead_Badge</fullName>
        <active>true</active>
        <label>Trailhead Badge</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>